# BreathSense

./: .gitignore  .projectlinkstore  app.c  app_freertos.c  breath_simu_Pi.py  breathsense_mg21.pintool  breathsense_mg21.slcp  breathsense_mg21.slps  finish_push.ps1  readme.md  vscode.conf
autogen/: gatt_db.c  gatt_db.h  gen.properties  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_simple_button_instances.c  sl_simple_button_instances.h  sl_simple_led_instances.c  sl_simple_led_instances.h
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
cmake_gcc/: CMakeLists.txt  CMakePresets.json  breathsense_mg21.cmake
config/: FreeRTOSConfig.h  pin_config.h  sl_bt_rtos_config_s2.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_memory_manager_region_config.h  sl_rail_util_pa_config.h  sl_rail_util_pa_tables_config.h  sl_rail_util_rf_path_config.h  sl_simple_button_bt_01_config.h  sl_simple_button_btn0_config.h  sl_simple_button_btn1_config.h  sl_simple_led_led_CN_config.h  sl_simple_led_led_disCN_config.h
config/btconf/: gatt_configuration.btconf  slc_args.json
